tests/expectations/compiler/constants/constant_loop_bound_type_mismatch_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372003]: Expected type `u8` but type `u32` was found
    --> compiler-test:8:22
     |
   8 |         for i: u8 in START..STOP {
     |                      ^^^^^
"""]
